--- a/Back_End/src/main/resources/properties.properties
+++ b/Back_End/src/main/resources/properties.properties
@@ -1,5 +1,5 @@
 properties.entity=lk.ijse.spring.entity
-properties.driver=com.mysql.jdbc.Driver
+properties.driver=com.mysql.cj.jdbc.Driver
 properties.url=jdbc:mysql://localhost:3306/dbCarRental?createDatabaseIfNotExist=true
 properties.username=root
 properties.password=1234
