--- a/Back_End/pom.xml
+++ b/Back_End/pom.xml
@@ -103,8 +103,18 @@
             <version>5.3.30</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.15.0</version>
+        </dependency>
 
-
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version>
+        </dependency>
+        
     </dependencies>
 
 </project>
